# bszet-mind

./: .gitignore  Cargo.toml  Dockerfile
.github/workflows/: ci.yaml
bszet-davinci/: Cargo.toml
bszet-davinci/src/: change.rs  iteration.rs  lib.rs  test.rs
bszet-davinci/src/extractor/: html_table.rs  mod.rs  parser.rs
bszet-davinci/src/html/: mod.rs
bszet-davinci/src/timetable/: igd21.rs  mod.rs
bszet-davinci/templates/: plan.stpl
bszet-image/: Cargo.toml
bszet-image/src/: lib.rs
bszet-main/: Cargo.toml
bszet-main/src/: ascii.rs  main.rs
bszet-mind/: Cargo.toml
bszet-mind/src/: ascii.rs  main.rs  tests.rs
bszet-mind/src/api/: davinci.rs  mod.rs
bszet-mind/static/: inter.css
bszet-notify/: Cargo.toml
bszet-notify/src/: lib.rs  telegram.rs  test.rs
