[package]
name = "bszet-davinci"
version = "0.0.0-git"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls-webpki-roots"] }
time = { version = "0.3", default-features = false, features = ["parsing", "std"] }
tokio = { version = "1.29", default-features = false, features = ["sync"] }
sentry = { version = "0.31", default-features = false }
once_cell = "1.18"
sailfish = "0.7"
tracing = "0.1"
select = "0.6"
anyhow = "1.0"
regex = "1.9"

[dev-dependencies]
tokio = { version = "1.29", default-features = false, features = ["macros", "test-util"] }
