[package]
name = "bszet-image"
version = "0.0.0-git"
edition = "2021"

[dependencies]
fantoccini = { version = "0.20.0-rc.4", default-features = false }
hyper = { version = "0.14.26", features = ["client"], default-features = false }
anyhow = "1.0"

[dev-dependencies]
tokio = { version = "1.28", default-features = false, features = ["macros", "test-util"] }
