[package]
name = "bszet-mind"
description = "A tool to monitor STÜBER SYSTEMS' DAVINCI's HTML exported substitution plan for changes."
version = "0.0.0-git"
edition = "2021"

[dependencies]
tokio = { version = "1.25", default-features = false, features = ["macros", "rt-multi-thread", "signal"] }
axum = { version = "0.6", features = ["tokio", "query"], default-features = false }
tracing-subscriber = { version = "0.3", features = ["fmt"] }
reqwest = { version = "0.11", default-features = false }
clap = { version = "4.1", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
time = { version = "0.3", features = ["serde"] }
bszet-davinci = { path = "../bszet-davinci" }
bszet-notify = { path = "../bszet-notify" }
bszet-image = { path = "../bszet-image" }
include_dir = "0.7"
tracing = "0.1"
anyhow = "1.0"

sentry = { version = "0.29", features = ["backtrace", "contexts", "panic", "anyhow", "reqwest", "rustls", "tower"], default-features = false }
sentry-tracing = "0.29"
