[package]
name = "bszet-notify"
version = "0.0.0-git"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls-webpki-roots"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"

[dev-dependencies]
tokio = { version = "1.24", default-features = false, features = ["macros", "test-util"] }
